<resources>
    <string name="app_name">SATR</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Full Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="text_login">SATR Login</string>
    <string name="editTextUsernameHint">Enter Username</string>
    <string name="editTextPasswordHint">Enter Password</string>
    <string name="text_attempt">Attempts Left:</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_register">Register</string>
    <string name="satr">SATR</string>
    <string name="paradestate">PARADE STATE</string>
    <string name="shift">SHIFT</string>
    <string name="mwds">MWDS</string>
    <string name="nsmen">NSMEN</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="date_picked">Date Picked</string>
    <string name="DatePicked">Date Picked:</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="arrest">Arrest</string>
    <string name="attack">Attack</string>
    <string name="perimeter">Perimeter</string>
    <string name="dog_handle">Dog handle</string>
    <string name="explosive">Explosive</string>
    <string name="rules">Rules</string>
    <string name="live_firing">Live Firing</string>
    <string name="dog">Dog Icon</string>
    <string name="handcuff">Handcuff Icon</string>
    <string name="fence">fence Icon</string>
    <string name="attack_dog">Attack dog Icon</string>
    <string name="bomb">Bomb Icon</string>
    <string name="rules_icon">Rules Icon</string>
    <string name="live_firing_icon">Live Firing Icon</string>
    <string name="courses_picked">Courses Picked:</string>
    <string name="refresh">Refresh</string>
    <string name="overview">Overview</string>
    <string name="_605_satr_performance">605 SATR Performance</string>
    <string name="mwds_requirement">MWDS SATR Requirement</string>
    <string name="nsmen_requirement">NSMEN SATR Requirement</string>
    <string name="reason">reason</string>
    <string name="reason_caps">Reason</string>
    <string name="irf_requirement">IRF Requirement</string>
    <string name="guard_comd_requirement">Guard Comd Requirement</string>
    <string name="checker_requirement">Checker Requirement</string>
    <string name="armed_guard_requirement">Armed Guard Requirement</string>
    <string name="shift_requirement">Shift Requirement</string>
    <string name="search_hint">Search name</string>
    <string name="action_save">Save Action</string>
    <string name="action_settings">Settings Action</string>
    <string name="action_search">Action Search</string>
    <string name="no_result">No Result</string>

    <string-array name="years_array">
        <item>Jan 2019</item>
        <item>Jul 2019</item>
        <item>Jan 2020</item>
        <item>Jul 2020</item>
        <item>Jan 2021</item>
        <item>Jul 2021</item>
        <item>Jan 2022</item>
        <item>Jul 2022</item>
    </string-array>

</resources>
