<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CoursesDog">

    <ImageView
      android:id="@+id/fence"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/fence"
      android:contentDescription="@string/fence"/>
    <ImageView
      android:id="@+id/handcuff"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:contentDescription="@string/handcuff"
      app:layout_constraintStart_toEndOf="@+id/fence"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/handcuff"/>
    <TextView
      android:id="@+id/arrest"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="4dp"
      android:text="@string/arrest"
      app:layout_constraintStart_toEndOf="@+id/perimeter"
      app:layout_constraintTop_toBottomOf="@+id/handcuff"/>
    <ImageView
      android:id="@+id/attack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toEndOf="@+id/handcuff"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/attack"
      android:contentDescription="@string/attack_dog"/>
    <TextView
      android:id="@+id/attacktext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="28dp"
      android:text="@string/attack"
      app:layout_constraintStart_toEndOf="@+id/arrest"
      app:layout_constraintTop_toBottomOf="@+id/attack"/>
    <TextView
      android:id="@+id/perimeter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/perimeter"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/fence"/>

    <ImageView
            android:id="@+id/dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/dog"
            android:contentDescription="@string/dog" app:layout_constraintStart_toEndOf="@+id/attack"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
      android:id="@+id/mwds"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/dog_handle"
      app:layout_constraintStart_toEndOf="@+id/attacktext"
      app:layout_constraintTop_toBottomOf="@+id/dog"/>
    <ImageView
      android:id="@+id/bomb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/perimeter"
      app:srcCompat="@mipmap/bomb"
      android:contentDescription="@string/bomb"/>
    <TextView
      android:id="@+id/explosive"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/explosive"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/bomb"/>
    <ImageView
      android:id="@+id/rules"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toEndOf="@+id/bomb"
      app:layout_constraintTop_toBottomOf="@+id/arrest"
      app:srcCompat="@mipmap/rules"
      android:contentDescription="@string/rules_icon"/>
    <TextView
            android:id="@+id/rulestext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/rules"
            app:layout_constraintStart_toEndOf="@+id/explosive"
            app:layout_constraintTop_toBottomOf="@+id/rules"/>
    <ImageView
            android:id="@+id/livefiring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/rules"
            app:layout_constraintTop_toBottomOf="@+id/attacktext"
            app:srcCompat="@mipmap/livefiring"
            android:contentDescription="@string/live_firing_icon" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:id="@+id/livefiringtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/live_firing"
            app:layout_constraintStart_toEndOf="@+id/rulestext"
            app:layout_constraintTop_toBottomOf="@+id/livefiring" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>