<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Authentication.Register">

    <EditText
            android:id="@+id/et_user_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/user_name"
            android:autofillHints="@string/user_name"
            android:inputType="textPersonName" />
    <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:ems="10"
            android:layout_below="@id/et_user_name"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress" />
    <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />
    <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

</RelativeLayout>