<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
            android:id="@+id/emptyElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_result"
            android:textColor="#525252"
            android:textSize="19.0sp"
            android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_bar"
        android:layout_below="@+id/my_toolbar">
    <TextView
            android:id="@+id/courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="12dp"
            android:textStyle="italic"
            android:text="@string/courses_picked"/>
    <TextView
            android:text="@string/date_picked"
            android:layout_width="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:id="@+id/date_picked"/>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
      <ImageButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/btn_save"
              android:src="@drawable/ic_save_black_24dp"
              style="@style/Widget.AppCompat.Button.Borderless"/>
      <ImageButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/btn_edit"
              android:src="@drawable/ic_edit_black_24dp"
              style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
  </RelativeLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearText"
        android:layout_below="@+id/top_bar">
    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="12"
            android:layout_marginStart="2dp"
            android:textStyle="bold"
            android:id="@+id/name"/>
    <TextView
            android:text="@string/reason_caps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="4"
            android:layout_marginStart="2dp"
            android:textStyle="bold"
            android:id="@+id/Reason"/>
    <TextView
          android:text="@string/status"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:textSize="14sp"
          android:layout_weight="3"
          android:textStyle="bold"
          android:id="@+id/status"/>
  </LinearLayout>
  <android.support.v7.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearText"/>
</RelativeLayout>