<?xml version = "1.0" encoding = "utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Authentication.Login">

    <TextView android:text="@string/text_login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/text_login"
              android:textSize="35sp" android:layout_marginTop="100dp"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
              android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.497"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:focusable="true"
        android:inputType="textWebEmailAddress"
        android:hint="@string/editTextUsernameHint"
        android:autofillHints="username"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/editTextPasswordHint"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="#808080"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"/>

    <TextView
        android:id="@+id/text_attempt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/text_attempt"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_counter"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/text_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="232dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_attempt"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btn_register"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_login"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_login" />

</android.support.constraint.ConstraintLayout>