<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Satr">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/shift"
            android:focusable="true"
            android:id="@+id/imgShift"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/mwds"
            android:focusable="true"
            android:id="@+id/imgMwds"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imgShift"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/nsmen"
            android:focusable="true"
            android:id="@+id/imgNsmen"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imgMwds"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shift"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgShift" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/mwds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mwds"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgMwds" app:layout_constraintStart_toEndOf="@+id/shift"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/nsmen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nsmen"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imgNsmen" app:layout_constraintStart_toEndOf="@+id/mwds"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>